<resources>
    <string name="app_name">BillingSystemsApp</string>
    <string name="dictionary_title">Словарь</string>
    <string name="add_word_title">Добавить слово</string>
    <string name="edit_word_title">Редактировать слово</string>
    <string name="add_word_button_title">Добавить</string>
    <string name="save_word_button_title">Сохранить</string>
    <string name="word_hint">Слово</string>
    <string name="translation_hint">Перевод</string>
    <string name="offer_translations_title">Предложения перевода</string>
    <string name="delet_confirmation_text">Вы действительно хотите удалить слово <b>%s</b> из словаря?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="error_word_cant_be_emptu">Поле "Слово" не может быть пустым</string>
    <string name="error_translation_cant_be_emptu">Поле "Перевод" не может быть пустым</string>
    <string name="your_dictionary_is_empty">Ваш словарь пока пуст</string>
</resources>
