<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:billingApp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirmation_delete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="28dp"
        android:text="@string/delet_confirmation_text"
        billingApp:layout_constraintBottom_toTopOf="@+id/cancel_delete_button"
        billingApp:layout_constraintEnd_toEndOf="parent"
        billingApp:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        billingApp:layout_constraintBottom_toBottomOf="parent"
        billingApp:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        billingApp:layout_constraintBottom_toBottomOf="parent"
        billingApp:layout_constraintEnd_toStartOf="@+id/confirm_delete_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
    
    
    
    